# zares-css

./: .ci-test-output.txt  .gitignore  .npmignore  AGENT.md  BOOLEAN_VARIANTS_COMPLETE_FIX.md  BOOLEAN_VARIANTS_FIX_SUMMARY.md  BOX_MODEL_ANALYSIS.json  CHANGELOG.md  COMMIT_SUMMARY.md  DEV_SERVER_STATUS_JULY4.md  DOCUMENTATION_UPDATED_JULY4.md  DUPLICATE_COMPONENTS_FIXED.md  INTEGRATION_STATUS_MATRIX.csv  README.md  REPRODUCE_OBJECT_CONFIG_ERROR.ts  SCANNER_DASHBOARD_IMPLEMENTATION.md  SCANNER_DASHBOARD_INDEX.md  SCANNER_DASHBOARD_QUICK_START.md  SCANNER_DASHBOARD_VISUAL.md  SCANNER_OUTPUT_CAPTURE_STATIC.md  SCANNER_OUTPUT_COMPARISON.md  SCANNER_VISUALIZATION_OPTIONS.md  TASK_4_VERIFICATION_FINAL.md  TASK_COMPLETION_SUMMARY.md  TASK_STATUS_FINAL.md  TEST_NUMERIC_VARIANTS.md  VERIFICATION_CHECKLIST.md  context7.json  fix-boolean-variants.mjs  fix-box-model-complete.mjs  fix-box-model-variants.mjs  fix-numeric-variants-comprehensive.mjs  fix-page-boolean-variants.mjs  kilo.json  known-issues.md  llms.txt  package-lock.json  package.json  tsconfig.base.json  tsconfig.dev.json  (+5 more)
native/: API_PHASE_7_3_MODULAR.md  ARCHITECTURE_MODULAR_GUIDE.md  CHANGELOG_oxc_parser.md  Cargo.toml  MIGRATION_GUIDE_PHASE_7_3.md  NAPI_MODULE_TESTS_SUMMARY.md  PHASE_1A_COMPLETION.md  PROPERTY_TESTING_DEPENDENCIES.md  build_errors.txt  build_output.txt  check_output.txt  err.txt  index.d.ts  index.js  index.redis.d.ts  index.test.ts  index.ts  napi.config.json  package.json  tsconfig.json
native/.cargo/: config.toml
native/bench/: README.md
native/benches/: README.md  cache_backends_bench.rs  class_parser_v2_bench.rs  performance_bench.rs  phase2_performance_bench.rs  quick_10k_bench.rs  theme_resolver_cache_bench.rs  week3_performance_bench.rs  week8_memory_profiling.rs  week9_scale_benchmarks.rs
native/src/: animation.rs  ast_optimizer.rs  ast_optimizer_tests.rs  debug.rs  debug_macro_test.rs  debug_test.rs  legacy_root_part.rs  lib.rs  oxc_parser.rs  oxc_parser_tests.rs  scan_cache.rs  scan_cache_tests.rs  tests.rs  watcher.rs  watcher_tests.rs
native/tests/: cache_adapters_tests.rs  cache_backends_unit_tests.rs  cache_integration_tests.rs.disabled  (+41 more)
(+1085 files in other folders)
